--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Zhang Kan的笔记
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
+author: Zhang Kan
 language: en
 timezone: ''
 
@@ -43,14 +43,15 @@ render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
-syntax_highlighter: highlight.js
 highlight:
+  enable: true
   line_number: true
   auto_detect: false
   tab_replace: ''
   wrap: true
   hljs: false
 prismjs:
+  enable: false
   preprocess: true
   line_number: true
   tab_replace: ''
@@ -96,9 +97,12 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git # 类型填git
+  repo: git@github.com:boboji-zk/boboji-zk.github.io.git# 你的Github仓库地址
+  branch: hexo-test # 分支名称。默认填写 master 如果您使用的是 GitHub ，程序会尝试自动检测。
+  message: # 提交信息可以自定义，不填的则默认为提交时间
